[project]
name = "place-pulse-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
]
